insert abstract to thesis format

--- a/thesis-work/abstract.tex
+++ b/thesis-work/abstract.tex
@@ -1,7 +1,8 @@
 \begin{abstract}
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus tellus eget erat congue cursus. Donec nulla dui, pretium at euismod ultrices, dictum quis mauris. Maecenas accumsan gravida elit cursus elementum. Nunc euismod mauris et tincidunt faucibus. Integer dolor quam, vulputate sed odio id, ornare mattis mi. In iaculis efficitur tortor, quis fermentum dolor blandit et. Vivamus tempor rutrum turpis vitae elementum. Morbi fermentum nulla a iaculis ultricies. Cras dictum dapibus odio, in fermentum justo porta quis. Donec a neque diam. Ut convallis sodales blandit.
-
-Integer nec nibh eget erat eleifend condimentum in sit amet odio. Integer justo elit, tempus eget ultricies vel, congue eget sem. Curabitur augue nibh, dignissim at rhoncus pulvinar, gravida sit amet ante. Aenean ullamcorper velit id nulla porta cursus. Proin placerat urna quis metus egestas congue. Donec posuere leo eget sapien imperdiet, ultricies volutpat arcu tincidunt. Morbi egestas magna a nisi sagittis, nec elementum ex tincidunt. Nunc euismod dui leo, ut viverra nulla commodo ut. In sed sem et ligula fermentum mollis sit amet in tellus. Nam ac neque neque. Nunc lacinia nibh lectus, sit amet dictum libero tempor in.
-
-Nunc malesuada eros vel purus lobortis sollicitudin. Nam in viverra nunc. Duis tincidunt velit diam, et sodales augue posuere sed. Ut cursus metus et arcu fermentum, id imperdiet ipsum interdum. Nullam eleifend non tellus eget semper. In dictum consequat enim, eget auctor lacus volutpat et. Vestibulum in urna mauris. In hac habitasse platea dictumst. Phasellus tempus eros placerat, tincidunt orci at, hendrerit felis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris ac lacinia justo, a lobortis odio. 
+Yao's two-party communication complexity is a well-studied model. The most simple settings are the deterministic settings. In these settings, we want to find an algorithm that gets the exact solution for every input. This model has two somewhat similar extensions. The first one is the randomized settings. In this model, every player gets a random string (private or public) and can use it in the protocol. In this case, we want the protocol to solve the problem with an error of up to $\epsilon$ (over the randomized strings). \newline
+Another model is when the inputs themselves are randomized. In this model, we need to design a protocol that solves the problem with an error of up to $\epsilon$ for every distribution on the inputs. Another interesting problem is to design a protocol that solves the problem for every product distribution (in which the players' inputs are independent. \newline
+One of the most important problems (sometimes called the "mother of problems") is the Set Disjointness problem. In this problem, every player gets an n-bit array and they are asked whether there is an index $i$ where the $i$'th bit is turned on in all of their inputs. \newline
+This problem has been studied thoroughly on different models. It has been proved that every randomized protocol must use $\Omega(n)$ in order to achieve constant error bound from $\frac{1}{2}$.  Also, it has been proved that the distributional communication complexity of this problem is also $\Omega(n)$ using the corruption methods. Another interesting question is what happens when we limit ourselves to product distribution. In this case, a tight bound of $\Theta(\sqrt(n))$ has been proved but only for two players. \newline
+In this paper, we tried to expand this bound for every number of players $k$. We have succeeded to prove the upper bound of $O(kn^{\frac{1}{k}})$. 
+In the two-player protocol, Bob reveals a large number of his zeros to Alice using the public randomness and the fact that the inputs are drawn from known product distribution. This method is not easy to generalize since every player may eliminate $\frac{n}{k}$ zeros 
 \end{abstract}
