seq_disj to file

--- a/thesis-work/thesis.tex
+++ b/thesis-work/thesis.tex
@@ -236,6 +236,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \chapter{Upper bound for small parties}
+\include{seq_disj}
+
 \chapter{Upper bound for large parties}
 \chapter{Lower bound for $AND_k$ for small parties}
 %% *** Include chapter files here. ***
