--- a/thesis-work/thesis.tex
+++ b/thesis-work/thesis.tex
@@ -142,7 +142,7 @@
 %% separate file and use "\input{filename}" to input it here.
 
 \input{macros}
-
+\input{myMacros}
 
 %% *** Adjust the following settings as desired. ***
 
