lower bound to thesis

--- a/thesis-work/thesis.tex
+++ b/thesis-work/thesis.tex
@@ -249,6 +249,7 @@
 \chapter{Upper bound for large parties}
 \include{protocol2}
 \chapter{Lower bound for $AND_k$ for small parties}
+\include{lower}
 %% *** Include chapter files here. ***
 
 %% This adds a line for the Bibliography in the Table of Contents.
