--- a/compression/main.tex
+++ b/compression/main.tex
@@ -32,7 +32,7 @@
 \maketitle
 
 \begin{abstract}
-abstract 
+ 
 \end{abstract}
 
 \section{Introduction}
@@ -166,6 +166,7 @@ This fact matches the intuition.
 However, the divergence $D(\mu\,\|\,\tilde{\mu})$ can be arbitrarily large (even infinite). Thus $D(\mu\,\|\,\tilde{\mu})$ does not capture the relevant notion of discrepancy for compression.
 \end{example}
 
+\nocite{*}
 \bibliographystyle{alpha}
 \bibliography{refs}
 
